--- a/layout.yaml
+++ b/layout.yaml
@@ -1,44 +1,35 @@
-# node      : 4 outs      : 16  universes   : 2720  pixels
-# out       : ----------- : 4   universes   : 680   pixels
 # universe  : ----------------------------- : 170   pixels
 #
 #                                node 0
+#
 #      out 0      |      out 1      |      out 2      |      out 3
 # u00 u01 u02 u03 | u04 u05 u06 u07 | u08 u09 u10 u11 | u12 u13 u14 u15
+#
+# 0..127 net with 0..15 subnet with 0..15 universe
+
 ---
 nodes:
-  - addr: { ip: 10.0.0.10, net: 0, subnet: 0 }
-    label: box
+  - ip: 10.0.0.10
+    name: box
     outs:
       0: 0-300  # { output number : global pixel numbers range }
       1: 300-600
 
-#
-#  - addr: { ip: 10.0.0.10, net: 0, subnet: 1 }
-#    name: node-1
-#    outs:
-#      0: 901, 1001-1010
-#      1: 600 - 725
-#      3: 725- 800,1015
-#
-#  - addr: { ip: 10.0.0.10, net: 0, subnet: 4 }
-#    name: j-50
-#    outs:
-#      2: 800-850
-#
-#  - addr: { ip: 10.0.0.10, net: 0, subnet: 2 }
-#    name: tail
-#    outs:
-#      1: 1016-1028
-#      3: 1062
+  - ip: 10.0.0.11
+    name: node-1
+    outs:
+      0: 901, 1001-1010
+      1: 600 - 725
+      3: 725- 800,1015
 
-# result will be like:
-# pixel global indexes   address
-# 0-600                   -> ip: 10.0.0.10, net: 0, subnet: 0, out: 0
-# 600-725                 -> ip: 10.0.0.10, net: 0, subnet: 1, out: 1
-# 725-800                 -> ip: 10.0.0.10, net: 0, subnet: 1, out: 3
-# 800-850                 -> ip: 10.0.0.10, net: 0, subnet: 3, out: 2
-# 901, 1001-1010          -> ip: 10.0.0.10, net: 0, subnet: 1, out: 0
-# 1015                    -> ip: 10.0.0.10, net: 0, subnet: 1, out: 3
-# 1016-1028               -> ip: 10.0.0.10, net: 0, subnet: 4, out: 1
-# 1062                    -> ip: 10.0.0.10, net: 0, subnet: 4, out: 3
+  - ip: 10.0.0.12
+    name: j-50
+    outs:
+      2: 800-850
+
+  - ip: 10.0.0.13
+    name: tail
+    outs:
+      1: 1016-1028
+      3: 1062
+      7: 850-900, 910, 911
