--- a/layout.yaml
+++ b/layout.yaml
@@ -9,25 +9,25 @@
 
 ---
 nodes:
-  - ip: 10.0.0.10
+  - host: 10.0.0.10
     name: box
     outs:
       0: 0-300  # { output number : global pixel numbers range }
       1: 300-600
 
-  - ip: 10.0.0.11
+  - host: 10.0.0.11
     name: node-1
     outs:
       0: 901, 1001-1010
       1: 600 - 725
       3: 725- 800,1015
 
-  - ip: 10.0.0.12
+  - host: 10.0.0.12
     name: j-50
     outs:
       2: 800-850
 
-  - ip: 10.0.0.13
+  - host: 10.0.0.13
     name: tail
     outs:
       1: 1016-1028
