--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-pytest~=7.2.0
+pytest==7.2.1
 PyYAML~=6.0
 numpy~=1.24.1
 # opencv-python~=4.7.0.68
+
+opencv-python~=4.7.0.68
+mock~=5.0.1
+schema~=0.7.5
