add tests, create a project

--- a/layout.yaml
+++ b/layout.yaml
@@ -14,22 +14,22 @@ nodes:
     outs:
       0: 0-300  # { output number : global pixel numbers range }
       1: 300-600
-
-  - host: 10.0.0.11
-    name: node-1
-    outs:
-      0: 901, 1001-1010
-      1: 600 - 725
-      3: 725- 800,1015
-
-  - host: 10.0.0.12
-    name: j-50
-    outs:
-      2: 800-850
-
-  - host: 10.0.0.13
-    name: tail
-    outs:
-      1: 1016-1028
-      3: 1062
-      7: 850-900, 910, 911
+#
+#  - host: 10.0.0.11
+#    name: node-1
+#    outs:
+#      0: 901, 1001-1010
+#      1: 600 - 725
+#      3: 725- 800,1015
+#
+#  - host: 10.0.0.12
+#    name: j-50
+#    outs:
+#      2: 800-850
+#
+#  - host: 10.0.0.13
+#    name: tail
+#    outs:
+#      1: 1016-1028
+#      3: 1062
+#      7: 850-900, 910, 911
