--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -21,7 +21,7 @@ jobs:
           pip install -r requirements.txt
       - name: Lint with flake8
         run: |
-          flake8 . --show-source --statistics
+          flake8 . --show-source --statistics --max-line-length=127
       - name: Test with pytest
         run: |
           python -m pytest .
